images no longer stretch

--- a/frontend/src/components/Events/EventsStyling.css
+++ b/frontend/src/components/Events/EventsStyling.css
@@ -67,6 +67,7 @@
 
 .single-event-image {
     border-radius: 6px;
+    object-fit: cover;
 }
 
 .event-edit {
